--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.0.0-beta.3",
+    "cookies-next": "^5.1.0",
     "dayjs": "^1.11.13",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "@types/node": "^20",
